# clockwork-island

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yml  make.yml
cmake/: FindSDL2.cmake
include/: AssetLoader.h  Assets.h  Background.h  Bool.h  Bounds.h  Buffer.h  Direction.h  Filter.h  Keyboard.h  Level.h  LevelLoader.h  Platform.h  Player.h  Robot.h  Texture.h  Viewport.h
include/SDL2/: SDL_hints.h  SDL_image.h  SDL_pixels.h  SDL_render.h
include/engine/: Background.h  Bitmap.h  BoundingBox.h  Buffer.h  Filter.h  Input.h  Keyboard.h  Level.h  Physics.h  Platform.h  Player.h  Sprite.h  Texture.h  Tile.h  Timer.h  Viewport.h  Window.h
include/game/: Assets.h  Direction.h  Filter.h  Hazard.h  Level.h  Platform.h  Robot.h
include/game/constants/: Direction.h  Filter.h
include/util/: LinkedList.h
level_gen/: level0.json  level_gen.py
lib/Darwin_arm/: libSDL2-2.0.0.dylib  libSDL2_image-2.0.0.dylib
resources/: CTT_Delivery_01.rar
resources/levels/: level0.lvl  level0.lvl.bak
src/: AssetLoader.c  Assets.cpp  Background.c  Bounds.c  Buffer.c  Direction.cpp  Filter.c  Filter.cpp  Game.c  Game.cpp  Keyboard.c  Level.c  Level.cpp  Level.h  LevelLoader.c  LevelLoader.h  Platform.c  Platform.cpp  Platform.h  Player.c  Player.h  Robot.cpp  Texture.c  Viewport.c
src/engine/: Background.c  Background.cpp  Bitmap.c  BoundingBox.cpp  Bounds.c  Buffer.c  Direction.c  Filter.c  Input.c  Input.cpp  Keyboard.c  Level.c  Physics.c  Platform.c  Player.c  Player.cpp  Sprite.cpp  Texture.c  Texture.cpp  Tile.cpp  Timer.cpp  Viewport.c  Viewport.cpp  Window.cpp
src/game/: Assets.cpp  Direction.cpp  Filter.cpp  Level.cpp  Platform.cpp  Robot.cpp
